--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ar.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=لون الخلفية (Automatic Translation)
 background-image=صورة خلفية (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=حاوية (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=هل تريد ترك هذا الموقع؟ قد لا يتم حفظ التغييرات التي أجريتها. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=لا يوجد نوع الأصول المحددة (Automat
 not-translated=لم تترجم (Automatic Translation)
 padding-horizontal=الحشو ح (Automatic Translation)
 padding-vertical=الحشو الخامس (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=حفظ التغييرات... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=قسم (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=حدد الصورة (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=إظهار مناطق قابلة للتحرير (Automatic Translation)
 space-between-columns=المسافة بين الأعمدة (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=ويعرف هذا المجال الموضوع. لتغيير إعدادات سمة انتقل إلى صفحة التكوين. (Automatic Translation)
 translating=تتم الآن الترجمة (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=إلغاء تعيين المجال (Automatic Translation)
 widgets=الحاجيات (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=ليس لديك أية أقسام. (Automatic Translation)
