--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ca.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Color de fons (Automatic Translation)
 background-image=Imatge de fons (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenidor (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Voleu abandonar aquest lloc? Canvis que hàgiu fet no pot ser salvat. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Cap tipus d'actius seleccionats (Automatic Translation)
 not-translated=No traduït (Automatic Translation)
 padding-horizontal=Farciment H (Automatic Translation)
 padding-vertical=Farciment V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Si deseu els canvis... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Secció (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Seleccioneu la imatge (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Mostra zones Editable (Automatic Translation)
 space-between-columns=Espai entre columnes (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Aquesta zona és definida pel tema. Canviar escenes de tema aneu a configuració de pàgina. (Automatic Translation)
 translating=Traducció (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Desassignar zona (Automatic Translation)
 widgets=Ginys (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=No teniu cap seccions. (Automatic Translation)
