--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_en.properties
@@ -1,8 +1,10 @@
 audience=Audience
 background-color=Background Color
 background-image=Background Image
+browse-all=Browse All
 changes-saved-at-x=Changes saved at {0}.
 container=Container
+content-type=Content Type
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted.
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved.
 experience=Experience
@@ -18,6 +20,7 @@ no-asset-type-selected=No Asset Type Selected
 not-translated=Not translated
 padding-horizontal=Padding H
 padding-vertical=Padding V
+saved=Saved
 saving-changes=Saving changes...
 secondary=Secondary
 section=Section
@@ -29,6 +32,7 @@ select-image=Select Image
 self=Self
 show-editable-areas=Show Editable Areas
 space-between-columns=Space Between Columns
+specific-content=Specific Content
 text-alignment=Text Alignment
 text-color=Text Color
 text-properties=Text properties
@@ -36,6 +40,9 @@ text-style=Text Style
 the-page-editor-is-empty=The page editor is empty.
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=This area is defined by the theme. To change theme settings go to page configuration.
 translating=Translating
+unmap=Unmap
 unmap-area=Unmap Area
 widgets=Widgets
+x-default={0} (Default)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page
 you-do-not-have-any-sections=You do not have any sections.
