--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_fa.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=رنگ پس زمینه (Automatic Translation)
 background-image=تصویر پس زمینه (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=ظرف (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=آیا مایلید که این سایت را ترک تغییرات شما ذخیره شده ممکن است. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=هیچ نوع دارایی انتخاب (Automatic Transl
 not-translated=ترجمه نشده است (Automatic Translation)
 padding-horizontal=بالشتک H (Automatic Translation)
 padding-vertical=بالشتک V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=ذخیره تغییرات... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=بخش (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=انتخاب تصویر (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=نمایش مناطق قابل ویرایش (Automatic Translation)
 space-between-columns=فاصله بین ستونها (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=این منطقه توسط موضوع تعریف شده است. برای تغییر تنظیمات تم را به صفحه تنظیمات بروید. (Automatic Translation)
 translating=ترجمه (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=منطقه unmap (Automatic Translation)
 widgets=ویدجت (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=هر بخش را ندارند. (Automatic Translation)
