--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_hu.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Háttérszín (Automatic Translation)
 background-image=Háttérkép (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konténer (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Szeretné, hogy hagyja ezt a webhelyet? Végrehajtott módosítások nem menthetők. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Nincs kijelölt eszköz típusa (Automatic Translation)
 not-translated=Nem lefordított (Automatic Translation)
 padding-horizontal=Padding H (Automatic Translation)
 padding-vertical=Tömítéseket V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Módosítások mentése... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Szakasz (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Válassza ki a kép (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Szerkeszthető területek megjelenítése (Automatic Translation)
 space-between-columns=Oszlopok közötti (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Ezen a területen a téma határozza meg. Változtatni beállítások téma megy oldal alakzat. (Automatic Translation)
 translating=Fordítás (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Feltérképezetlen terület (Automatic Translation)
 widgets=Kütyü (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Nincs olyan szakaszok. (Automatic Translation)
