--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_it.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Colore di sfondo (Automatic Translation)
 background-image=Immagine di sfondo (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contenitore (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vuoi uscire da questo sito? Modifiche apportate non vengano salvate. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Nessun tipo di Asset selezionato (Automatic Translation)
 not-translated=Non tradotto (Automatic Translation)
 padding-horizontal=Imbottitura H (Automatic Translation)
 padding-vertical=Imbottitura V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Salvare le modifiche... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sezione (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Selezionare immagine (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Visualizza aree modificabili (Automatic Translation)
 space-between-columns=Spazio tra le colonne (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Questa area è definita dal tema. Per modificare le impostazioni del tema passare alla pagina configurazione. (Automatic Translation)
 translating=Traduzione in corso (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Annullare il mapping di Area (Automatic Translation)
 widgets=Widget (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Non hai tutte le sezioni. (Automatic Translation)
