--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_iw.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=צבע רקע (Automatic Translation)
 background-image=תמונת רקע (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=מיכל (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=האם ברצונך להשאיר את האתר הזה? השינויים שביצעת עשויים לא יישמרו. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=נבחר את סוג הנכס אין (Automatic Translati
 not-translated=לא לתרגם (Automatic Translation)
 padding-horizontal=ריפוד H (Automatic Translation)
 padding-vertical=ריפוד V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=שמירת שינויים... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=סעיף (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=בחר את התמונה (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=מראים אזורים ניתנים לעריכה (Automatic Translation)
 space-between-columns=מרווח בין עמודות (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=אזור זה מוגדר לפי הנושא. כדי לשנות את ההגדרות של ערכת הנושא עבור דף תצורה. (Automatic Translation)
 translating=תרגום (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=בטל מיפוי האזור (Automatic Translation)
 widgets=יישומונים (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=אין לך כל מחלקה. (Automatic Translation)
