--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_lt.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Fono spalva (Automatic Translation)
 background-image=Fono paveikslėlis (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteineris (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Ar norite palikti šią svetainę? Keitimų įrašyti negalima. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Nepasirinktas turto tipas (Automatic Translation)
 not-translated=Vertimas (Automatic Translation)
 padding-horizontal=Užpildymas H (Automatic Translation)
 padding-vertical=Apdaila V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Išsaugoti pakeitimus... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Skyriuje (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Pasirinkite vaizdą (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Rodyti redaguojamas sritis (Automatic Translation)
 space-between-columns=Atstumas tarp stulpelių (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Ši vietovė yra nurodyta tema. Norėdami pakeisti temos parametrai eikite į konfigūracijos puslapis. (Automatic Translation)
 translating=Versti (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Pridėjimas prie darbaknygės plotas (Automatic Translation)
 widgets=Raštai (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Jūs neturite jokių sekcijų. (Automatic Translation)
