--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_nb.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Bakgrunnsfarge (Automatic Translation)
 background-image=Bakgrunnsbilde (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Beholder (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Vil du forlate denne siden? Endringene kan ikke lagres. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Ingen Gjenstandstype valgt (Automatic Translation)
 not-translated=Ikke oversatt (Automatic Translation)
 padding-horizontal=Utfylling H (Automatic Translation)
 padding-vertical=Utfylling V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Lagrer endringer... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Delen (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Velg bilde (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Vis redigerbare områder (Automatic Translation)
 space-between-columns=Avstanden mellom kolonnene (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Dette området er definert av temaet. Endre gå Temainnstillinger til side configuration. (Automatic Translation)
 translating=Oversette (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Unmap området (Automatic Translation)
 widgets=Widgets (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Du har ikke noen deler. (Automatic Translation)
