--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pl.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Kolor tła (Automatic Translation)
 background-image=Obraz tła (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Kontener (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Czy chcesz opuścić Tę stronę? Wprowadzone zmiany nie mogą zostać zapisane. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Nie ma wybranego typu Asset (Automatic Translation)
 not-translated=Nie przetłumaczone (Automatic Translation)
 padding-horizontal=Dopełnienie H (Automatic Translation)
 padding-vertical=Dopełnienie V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Zapisywanie zmian... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Sekcja (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Wybierz obraz (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Pokaż obszary edytowalne (Automatic Translation)
 space-between-columns=Odstęp między kolumnami (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Obszar ten jest zdefiniowany przez tematu. Aby zmienić ustawienia motywu przejdź do strony konfiguracji. (Automatic Translation)
 translating=Tłumaczenie (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Usuń mapowanie obszaru (Automatic Translation)
 widgets=Widgety (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Nie masz żadnych części. (Automatic Translation)
