--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_BR.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Cor de fundo (Automatic Translation)
 background-image=Imagem de fundo (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Contêiner (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Você quer deixar este site? As alterações feitas não poderão ser salvas. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Nenhum tipo de ativo selecionado (Automatic Translation)
 not-translated=Não traduzidas (Automatic Translation)
 padding-horizontal=Preenchimento de H (Automatic Translation)
 padding-vertical=Preenchimento V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Salvar as alterações... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Seção (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Selecione a imagem (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Mostrar áreas editáveis (Automatic Translation)
 space-between-columns=Espaço entre colunas (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Esta área é definida pelo tema. Para alterar as configurações de tema vão para configuração de página. (Automatic Translation)
 translating=Tradução em andamento (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Cancelar o mapeamento de área (Automatic Translation)
 widgets=Widgets (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Você não tem quaisquer seções. (Automatic Translation)
