--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_pt_PT.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Background Color (Automatic Copy)
 background-image=Background Image (Automatic Copy)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Container (Automatic Copy)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Do you want to leave this site? Changes you made may not be saved. (Automatic Copy)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=No Asset Type Selected (Automatic Copy)
 not-translated=Not translated (Automatic Copy)
 padding-horizontal=Padding H (Automatic Copy)
 padding-vertical=Padding V (Automatic Copy)
+saved=Saved (Automatic Copy)
 saving-changes=Saving changes... (Automatic Copy)
 secondary=Secondary (Automatic Copy)
 section=Section (Automatic Copy)
@@ -29,6 +32,7 @@ select-image=Select Image (Automatic Copy)
 self=Self (Automatic Copy)
 show-editable-areas=Show Editable Areas (Automatic Copy)
 space-between-columns=Space Between Columns (Automatic Copy)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=This area is defined by the theme. To change theme settings go to page configuration. (Automatic Copy)
 translating=Translating (Automatic Copy)
+unmap=Unmap (Automatic Copy)
 unmap-area=Unmap Area (Automatic Copy)
 widgets=Widgets (Automatic Copy)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=You do not have any sections. (Automatic Copy)
