--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_ru.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Цвет фона (Automatic Translation)
 background-image=Фоновое изображение (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Контейнер (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Вы хотите оставить этот сайт? Сделанные изменения не могут быть сохранены. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Не выбран тип актива (Automatic Translat
 not-translated=Не переведено (Automatic Translation)
 padding-horizontal=Заполнение H (Automatic Translation)
 padding-vertical=Заполнение V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Сохранение изменений... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Раздел (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Выбрать изображение (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Показать редактируемых областей (Automatic Translation)
 space-between-columns=Расстояние между столбцами (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Эта область определяется темой. Чтобы изменить параметры темы перейдите на страницу конфигурации. (Automatic Translation)
 translating=Выполняется перевод (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Отмена сопоставления области (Automatic Translation)
 widgets=Виджеты (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Вы не имеют каких-либо разделы. (Automatic Translation)
