--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_th.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=สีพื้นหลัง (Automatic Translation)
 background-image=ภาพพื้นหลัง (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=คอนเทนเนอร์ (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=คุณต้องออกจากไซต์นี้ ไม่สามารถบันทึกการเปลี่ยนแปลงที่คุณทำ (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=ชนิดไม่มีสินทรัพย์ท
 not-translated=ไม่แปล (Automatic Translation)
 padding-horizontal=ระยะห่าง H (Automatic Translation)
 padding-vertical=ขยาย V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=บันทึกการเปลี่ยนแปลง... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=ส่วน (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=เลือกรูปภาพ (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=แสดงพื้นที่สามารถแก้ไขได้ (Automatic Translation)
 space-between-columns=ช่องว่างระหว่างคอลัมน์ (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=พื้นที่นี้ถูกกำหนด โดยรูปแบบ การเปลี่ยนแปลง ชุดรูปแบบไปโครงหน้า (Automatic Translation)
 translating=กำลังแปล (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=ยกเลิกแม็ปที่ตั้ง (Automatic Translation)
 widgets=วิดเจ็ต (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=คุณไม่มีส่วนใด ๆ (Automatic Translation)
