--- a/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
+++ b/modules/apps/layout/layout-content-page-editor-web/src/main/resources/content/Language_tr.properties
@@ -1,8 +1,10 @@
 audience=Audience (Automatic Copy)
 background-color=Arka plan rengi (Automatic Translation)
 background-image=Arka plan resmi (Automatic Translation)
+browse-all=Browse All (Automatic Copy)
 changes-saved-at-x=Changes saved at {0}. (Automatic Copy)
 container=Konteyner (Automatic Translation)
+content-type=Content Type (Automatic Copy)
 do-you-want-to-delete-this-experience=Do you want to delete this experience? Its content will be deleted. (Automatic Copy)
 do-you-want-to-leave-this-site=Bu siteyi terk istiyor musunuz? Yaptığınız değişiklikler kaydedilmemiş olabilir. (Automatic Translation)
 experience=Experience (Automatic Copy)
@@ -18,6 +20,7 @@ no-asset-type-selected=Seçili hiçbir kıymet türü (Automatic Translation)
 not-translated=Tercüme değil (Automatic Translation)
 padding-horizontal=Doldurma H (Automatic Translation)
 padding-vertical=Doldurma V (Automatic Translation)
+saved=Saved (Automatic Copy)
 saving-changes=Değişiklikleri kaydediliyor... (Automatic Translation)
 secondary=Secondary (Automatic Copy)
 section=Bölüm (Automatic Translation)
@@ -29,6 +32,7 @@ select-image=Resim seçin (Automatic Translation)
 self=Self (Automatic Copy)
 show-editable-areas=Düzenlenebilir alanları göster: (Automatic Translation)
 space-between-columns=Sütunlar arasındaki boşluk (Automatic Translation)
+specific-content=Specific Content (Automatic Copy)
 text-alignment=Text Alignment (Automatic Copy)
 text-color=Text Color (Automatic Copy)
 text-properties=Text properties (Automatic Copy)
@@ -36,6 +40,9 @@ text-style=Text Style (Automatic Copy)
 the-page-editor-is-empty=The page editor is empty. (Automatic Copy)
 this-area-is-defined-by-the-theme-to-change-theme-settings-go-to-page-configuration=Bu alan Tema tarafından tanımlanır. Değiştirmek için sayfa yapılandırma için tema ayarları gidin. (Automatic Translation)
 translating=Çevriliyor (Automatic Translation)
+unmap=Unmap (Automatic Copy)
 unmap-area=Alan eşlemesini kaldırın (Automatic Translation)
 widgets=Widget'ları (Automatic Translation)
+x-default={0} (Default) (Automatic Copy)
+you-can-select-here-the-content-source-for-this-display-page=You can select here the content source for This Display Page (Automatic Copy)
 you-do-not-have-any-sections=Herhangi bir bölüm var mı. (Automatic Translation)
